Modify file .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ workspace/*.py
 workspace/*.wav
 software/models_interface/output_sounds/*.wav
 software/transformations_interface/output_sounds/*.wav
+workspace/*.pdf
