Modify file .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ workspace/*.wav
 software/models_interface/output_sounds/*.wav
 software/transformations_interface/output_sounds/*.wav
 workspace/A*/*.pdf
+workspace/A*/*.pyc
