Modify file .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.so
 *.pyc
 *.o
+*~
 workspace/*.pyc
 workspace/*.py
 workspace/*.wav
@@ -9,3 +10,4 @@ software/models_interface/output_sounds/*.wav
 software/transformations_interface/output_sounds/*.wav
 workspace/A*/*.pdf
 workspace/A*/*.pyc
+workspace/A*/*~
